# npp

./: .gitignore  README.md  makefile  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-publish.yml
app/scripts/: main.py
app/scripts/editor/: editor.py  input_handler.py
nanoplusplus/: main.py
nanoplusplus/scripts/: main.py  nanoplusplus.py
nanoplusplus/tests/unit_tests/: test_save_file.py
