[project]
name = "NanoPlusPlus"
version = "0.0.1"
authors = [{ name = "Nicholas Teague", email = "nicholasp.teague@gmail.com" }]
description = "A lightweight terminal text editor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.dependencies]
click = "^8"
prompt-toolkit = "^3"
